Add sass-mq dependency
Sass-mq provides a Sass mixin to compose media queries.

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/tombout/lump-grid/issues"
   },
-  "homepage": "https://github.com/tombout/lump-grid#readme"
+  "homepage": "https://github.com/tombout/lump-grid#readme",
+  "devDependencies": {
+    "sass-mq": "^5.0.0"
+  }
 }
