--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/tombout/lump-grid#readme",
   "devDependencies": {
+    "gulp": "^4.0.0",
+    "gulp-sass": "^4.0.1",
     "sass-mq": "^5.0.0"
   }
 }
