Add and configure stylelint dependency

--- a/package.json
+++ b/package.json
@@ -24,6 +24,41 @@
   "devDependencies": {
     "gulp": "^4.0.0",
     "gulp-sass": "^4.0.1",
-    "sass-mq": "^5.0.0"
+    "gulp-stylelint": "^7.0.0",
+    "sass-mq": "^5.0.0",
+    "stylelint": "^9.3.0"
+  },
+  "stylelint": {
+    "rules": {
+      "block-no-empty": null,
+      "comment-empty-line-before": [
+        "always",
+        {
+          "ignore": [
+            "stylelint-commands",
+            "after-comment"
+          ]
+        }
+      ],
+      "declaration-colon-space-after": "always",
+      "max-empty-lines": 1,
+      "rule-empty-line-before": [
+        "always",
+        {
+          "except": [
+            "first-nested"
+          ],
+          "ignore": [
+            "after-comment"
+          ]
+        }
+      ],
+      "unit-whitelist": [
+        "em",
+        "rem",
+        "%",
+        "s"
+      ]
+    }
   }
 }
